--- a/build_scripts/windows/Product.wxs
+++ b/build_scripts/windows/Product.wxs
@@ -61,7 +61,7 @@
 
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder">
+      <Directory Id="ProgramFiles64Folder">
         <Directory Id="SDKFOLDER" Name="Microsoft SDKs">
           <Directory Id="AZUREFOLDER" Name="Azure">
             <Directory Id="AZURECLIFOLDER" Name="CLI2">
